--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; URL='http://jmonasterio.github.io/jst1/webgl/index.html'" />
+<meta http-equiv="refresh" content="0; URL='http://jmonasterio.github.io/jst1/WebGl/index.html'" />
 </head>
 Redirecting to game.
 </html>
